client/src/index.css
@import "tailwindcss";

@theme {
  --font-nunito: "Nunito Sans", sans-serif;
  --color-background: #292929;
  --color-foreground: #f3f3f3;
  --color-container: #212121;
  --color-message: #181818;
  --color-message-me: #4478a8;
  --color-btn-background: #0e0e0e;
  --color-form-background: #efefef;
  --color-error: rgb(204, 88, 72);
  --width-container: 800px;
}

@layer base {
  body {
    box-sizing: border-box;
    font-family: var(--font-nunito);
    font-size: var(--text-base);
    font-weight: 500;
    background-color: var(--color-background);
    color: var(--color-foreground);
  }
  input {
    border-radius: 14px;
    padding: 0.6em 1.2em;
    border: none;
    outline: none;
    font-size: 1em;
    font-weight: 500;
    background-color: var(--color-form-background);
    color: black;
  }
}

@layer components {
  .btn {
    @apply bg-btn-background border-none outline-none rounded-2xl font-medium cursor-pointer px-4 py-2 transition duration-300 ease-in-out;
  }

  .btn:hover {
    @apply transform scale-105;
  }

  .btn-hover {
    @apply transition duration-300 ease-in-out cursor-pointer;
  }

  .btn-hover:hover {
    @apply transform scale-105;
  }
}

